# clang-tidier

./: CHANGELOG.md  README.md  pyproject.toml
src/: __main__.py
src/clang_tidier/: __init__.py  colour.py  main.py  paths.py  version.py
