# This file is a part of marzer/clang-tidier and is subject to the the terms of the MIT license.
# Copyright (c) Mark Gillard <mark.gillard@outlook.com.au>
# See https://github.com/marzer/clang-tidier/blob/main/LICENSE.txt for the full license text.
# SPDX-License-Identifier: MIT

# windows:
# rmdir /S /Q dist & python -m build && twine upload dist/* & rmdir /S /Q dist

[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'clang-tidier'
requires-python = '>=3.8'
description = 'A simple runner for clang-tidy.'
authors = [{ name = "Mark Gillard", email = "mark.gillard@outlook.com.au" }]
license = 'MIT'
keywords = ['c++', 'clang-tidy']
classifiers = [
    'Development Status :: 3 - Alpha',
    'Programming Language :: C',
    'Programming Language :: C++',
    'Topic :: Software Development',
    'Topic :: Software Development :: Testing',
    'Topic :: Software Development :: Compilers',
    'Topic :: Software Development :: Build Tools',
    'Topic :: Software Development :: Bug Tracking',
    'Topic :: Utilities',
]
dependencies = ['misk >= 0.8.1', 'colorama']
dynamic = ['version', 'readme']

[project.scripts]
clang_tidier = 'clang_tidier:main'
'clang-tidier' = 'clang_tidier:main'

[project.urls]
Source = 'https://github.com/marzer/clang-tidier'
Tracker = 'https://github.com/marzer/clang-tidier/issues'
Funding = 'https://github.com/sponsors/marzer'

[tool.setuptools]
zip-safe = true

[tool.setuptools.dynamic]
version = { file = 'src/clang_tidier/version.txt' }
readme = { file = [
    'README.md',
    'CHANGELOG.md',
], content-type = 'text/markdown' }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"*" = ['*.txt', '*.hpp', '.clang-format']

[tool.setuptools.exclude-package-data]
"*" = ['meson.build', '.git*']

[tool.black]
line-length = 120
target-version = ['py38']
skip-string-normalization = true
skip-magic-trailing-comma = true
